# shoebox

./: .gitignore  README.md  STATUS.md  VERSIONS.md
.githooks/: pre-commit
.github/workflows/: ci.yml
app/: App.tsx  ShoeboxNitro.podspec  app.json  check-bundle.mjs  metro.config.js  nitro.json  package-lock.json  package.json  worker.bundle.hash  worker.bundle.mjs
app/__tests__/: meter.test.ts
app/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  settings.gradle
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/com/margelo/nitro/shoebox/: HybridShoeboxEmbed.kt  HybridShoeboxPaths.kt  HybridShoeboxRoll.kt
app/android/app/src/main/java/com/shoebox/: MainActivity.kt  MainApplication.kt
app/android/app/src/main/res/values/: strings.xml
app/android/app/src/main/res/xml/: network_security_config.xml
app/android/nitro/: cpp-adapter.cpp
app/cpp/: HybridShoeboxBytes.cpp  HybridShoeboxBytes.hpp
app/ios/: HybridShoeboxEmbed.swift  HybridShoeboxPaths.swift  HybridShoeboxRoll.swift  Podfile
app/ios/Shoebox/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
app/ios/Shoebox.xcodeproj/: project.pbxproj
app/ios/Shoebox.xcodeproj/xcshareddata/xcschemes/: Shoebox.xcscheme
app/src/: Grid.tsx  bytes.ts  embed.ts  meter.ts  paths.ts  roll.ts  sample-photo.ts  vault-client.ts
app/src/specs/: shoebox-bytes.nitro.ts  shoebox-embed.nitro.ts  shoebox-paths.nitro.ts  shoebox-roll.nitro.ts
app/src/types/: holepunch.d.ts
desktop/: join.mjs  package-lock.json  package.json  peek.mjs
worker/: build-schema.mjs  diagnostics.js  errors.js  identity.js  index.js  library.js  lifecycle.js  mnemonic.js  package-lock.json  package.json  rotation.js  thumbnail.js  vault.js
worker/spec/: index.js  schema.json
worker/test/: smoke.mjs
